--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.exonum.binding</groupId>
+      <artifactId>exonum-time-oracle</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
