--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java-util</artifactId>
       <version>${protobuf.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Explicitly define `provided` scope because it comes
